[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/zylann.hterrain/tools/resize_dialog/resize_dialog.gd" type="Script" id=1]
[ext_resource path="res://addons/zylann.hterrain/tools/icons/icon_heightmap_unmask.svg" type="Texture" id=2]
[ext_resource path="res://addons/zylann.hterrain/tools/icons/icon_long_arrow_right.svg" type="Texture" id=3]
[ext_resource path="res://addons/zylann.hterrain/tools/icons/icon_long_arrow_down.svg" type="Texture" id=4]
[ext_resource path="res://addons/zylann.hterrain/tools/icons/icon_small_circle.svg" type="Texture" id=5]
[ext_resource path="res://addons/zylann.hterrain/tools/util/dialog_fitter.tscn" type="PackedScene" id=6]

[node name="ResizeDialog" type="WindowDialog"]
margin_left = 130.0
margin_top = 126.0
margin_right = 430.0
margin_bottom = 326.0
rect_min_size = Vector2( 300, 200 )
window_title = "Resize terrain"
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_constants/separation = 24

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_right = 284.0
margin_bottom = 126.0
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 3.0
margin_right = 68.0
margin_bottom = 17.0
text = "Resolution"

[node name="ResolutionDropdown" type="OptionButton" parent="VBoxContainer/GridContainer"]
margin_left = 72.0
margin_right = 284.0
margin_bottom = 20.0
size_flags_horizontal = 3
toggle_mode = false

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 29.0
margin_right = 68.0
margin_bottom = 43.0
text = "Stretch"

[node name="StretchCheckBox" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_left = 72.0
margin_top = 24.0
margin_right = 284.0
margin_bottom = 48.0

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 82.0
margin_right = 68.0
margin_bottom = 96.0
text = "Direction"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/GridContainer"]
margin_left = 72.0
margin_top = 52.0
margin_right = 284.0
margin_bottom = 126.0

[node name="AnchorControl" type="GridContainer" parent="VBoxContainer/GridContainer/HBoxContainer"]
margin_right = 92.0
margin_bottom = 74.0
columns = 3

[node name="TopLeftButton" type="Button" parent="VBoxContainer/GridContainer/HBoxContainer/AnchorControl"]
margin_right = 28.0
margin_bottom = 22.0
icon = ExtResource( 2 )

[node name="TopButton" type="Button" parent="VBoxContainer/GridContainer/HBoxContainer/AnchorControl"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 22.0
icon = ExtResource( 2 )

[node name="TopRightButton" type="Button" parent="VBoxContainer/GridContainer/HBoxContainer/AnchorControl"]
margin_left = 64.0
margin_right = 92.0
margin_bottom = 22.0
icon = ExtResource( 2 )

[node name="LeftButton" type="Button" parent="VBoxContainer/GridContainer/HBoxContainer/AnchorControl"]
margin_top = 26.0
margin_right = 28.0
margin_bottom = 48.0
icon = ExtResource( 2 )

[node name="CenterButton" type="Button" parent="VBoxContainer/GridContainer/HBoxContainer/AnchorControl"]
margin_left = 32.0
margin_top = 26.0
margin_right = 60.0
margin_bottom = 48.0
icon = ExtResource( 2 )

[node name="RightButton" type="Button" parent="VBoxContainer/GridContainer/HBoxContainer/AnchorControl"]
margin_left = 64.0
margin_top = 26.0
margin_right = 92.0
margin_bottom = 48.0
icon = ExtResource( 2 )

[node name="ButtomLeftButton" type="Button" parent="VBoxContainer/GridContainer/HBoxContainer/AnchorControl"]
margin_top = 52.0
margin_right = 28.0
margin_bottom = 74.0
icon = ExtResource( 2 )

[node name="ButtomButton" type="Button" parent="VBoxContainer/GridContainer/HBoxContainer/AnchorControl"]
margin_left = 32.0
margin_top = 52.0
margin_right = 60.0
margin_bottom = 74.0
icon = ExtResource( 2 )

[node name="BottomRightButton" type="Button" parent="VBoxContainer/GridContainer/HBoxContainer/AnchorControl"]
margin_left = 64.0
margin_top = 52.0
margin_right = 92.0
margin_bottom = 74.0
icon = ExtResource( 2 )

[node name="Reference" type="Control" parent="VBoxContainer/GridContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 196.0
margin_bottom = 74.0
rect_min_size = Vector2( 100, 0 )

[node name="XArrow" type="TextureRect" parent="VBoxContainer/GridContainer/HBoxContainer/Reference"]
modulate = Color( 1, 0.292969, 0.292969, 1 )
anchor_right = 1.0
margin_left = 9.0
margin_bottom = 16.0
texture = ExtResource( 3 )

[node name="ZArrow" type="TextureRect" parent="VBoxContainer/GridContainer/HBoxContainer/Reference"]
modulate = Color( 0.292969, 0.602295, 1, 1 )
anchor_bottom = 1.0
margin_top = 10.0
margin_right = 16.0
texture = ExtResource( 4 )

[node name="ZLabel" type="Label" parent="VBoxContainer/GridContainer/HBoxContainer/Reference"]
margin_left = 14.0
margin_top = 54.0
margin_right = 22.0
margin_bottom = 68.0
text = "Z"

[node name="XLabel" type="Label" parent="VBoxContainer/GridContainer/HBoxContainer/Reference"]
margin_left = 52.0
margin_top = 14.0
margin_right = 60.0
margin_bottom = 28.0
text = "X"

[node name="Origin" type="TextureRect" parent="VBoxContainer/GridContainer/HBoxContainer/Reference"]
margin_left = 3.0
margin_top = 4.0
margin_right = 11.0
margin_bottom = 12.0
texture = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 284.0
margin_bottom = 170.0
custom_constants/separation = 16
alignment = 1

[node name="ApplyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 51.0
margin_right = 163.0
margin_bottom = 20.0
text = "Apply (no undo)"

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 179.0
margin_right = 233.0
margin_bottom = 20.0
text = "Cancel"

[node name="DialogFitter" parent="." instance=ExtResource( 6 )]

[connection signal="item_selected" from="VBoxContainer/GridContainer/ResolutionDropdown" to="." method="_on_ResolutionDropdown_item_selected"]
[connection signal="toggled" from="VBoxContainer/GridContainer/StretchCheckBox" to="." method="_on_StretchCheckBox_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
